[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/level/Bildschirmfoto 2022-01-27 um 23.17.04.png" type="Texture" id=1]
[ext_resource path="res://ui/tutorial_label.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/font/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/assets/arrow_down.png" type="Texture" id=4]
[ext_resource path="res://ui/assets/arrow_up.png" type="Texture" id=5]
[ext_resource path="res://tutorial.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=63]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=64]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=65]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=66]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=67]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=68]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=69]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=70]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=71]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=72]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=73]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=74]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=75]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=76]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=77]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Bildschirmfoto2022-01-27Um231704" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="Tut1" type="Button" parent="." groups=["Tut1"]]
visible = false
margin_left = 20.0
margin_top = 630.0
margin_right = 434.0
margin_bottom = 678.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 63 )
custom_styles/disabled = ExtResource( 2 )
disabled = true
text = "Enemies come from here."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown1" type="Sprite" parent="." groups=["Tut1"]]
visible = false
position = Vector2( 111, 678 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown1"]
anims/RESET = SubResource( 64 )
anims/jump = SubResource( 65 )

[node name="Tut2" type="Button" parent="." groups=["Tut2"]]
visible = false
margin_left = 830.0
margin_top = 270.0
margin_right = 1087.0
margin_bottom = 318.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 63 )
custom_styles/disabled = ExtResource( 2 )
disabled = true
text = "You are here."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown2" type="Sprite" parent="." groups=["Tut2"]]
visible = false
position = Vector2( 920, 318 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown2"]
anims/RESET = SubResource( 66 )
anims/jump = SubResource( 67 )

[node name="Tut3" type="Button" parent="." groups=["Tut3"]]
visible = false
margin_left = 492.0
margin_top = 450.0
margin_right = 1059.0
margin_bottom = 498.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 63 )
custom_styles/disabled = ExtResource( 2 )
disabled = true
text = "You can walk here with enter/mouse."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown3" type="Sprite" parent="." groups=["Tut3"]]
visible = false
position = Vector2( 690, 498 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown3"]
anims/RESET = SubResource( 68 )
anims/jump = SubResource( 69 )

[node name="Tut4" type="Button" parent="." groups=["Tut4"]]
visible = false
margin_left = 983.0
margin_top = 355.0
margin_right = 1379.0
margin_bottom = 403.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 63 )
custom_styles/disabled = ExtResource( 2 )
disabled = true
text = "You have to protect them."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown4" type="Sprite" parent="." groups=["Tut4"]]
visible = false
position = Vector2( 1048, 400 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown4"]
anims/RESET = SubResource( 70 )
anims/jump = SubResource( 71 )

[node name="ArrowDown5" type="Sprite" parent="." groups=["Tut4"]]
visible = false
position = Vector2( 1192, 400 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown5"]
anims/RESET = SubResource( 72 )
anims/jump = SubResource( 73 )

[node name="ArrowDown6" type="Sprite" parent="." groups=["Tut4"]]
visible = false
position = Vector2( 1192, 340 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown6"]
anims/RESET = SubResource( 74 )
anims/jump = SubResource( 75 )

[node name="ArrowDown7" type="Sprite" parent="." groups=["Tut4"]]
visible = false
position = Vector2( 1048, 340 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
offset = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowDown7"]
anims/RESET = SubResource( 76 )
anims/jump = SubResource( 77 )

[node name="TutTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="TutTimer" to="." method="_on_timeout"]
